--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,13 @@
     background: black;
     // transform-origin: 0%;
 }
+
+.cursor{
+    border: solid 1px rgb(84, 84, 84);
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: fixed;
+    pointer-events: none;
+    z-index: 3;
+}
