--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -8,15 +8,14 @@ $primary-color: rgb(84, 84, 84);
     display: flex;
     &__col{
         display: flex;
-        gap: 10px;
+        gap: 20px;
         li{
             list-style-type: none;
-            padding: 5px 0px;
             a{
                 transition: transform 0.2s ease;
-                &:hover{
-                    transform: translateY(2px);
-                }
+                // &:hover{
+                //     transform: translateY(2px);
+                // }
             }
         }
         
