--- a/src/components/Stack/Stack.module.scss
+++ b/src/components/Stack/Stack.module.scss
@@ -35,10 +35,10 @@ $primary-color: rgb(84, 84, 84);
     .languages {
         flex-direction: column;
         padding:15px;
-        height: calc(50vh);
+        height: 260px;
 
         &__col {
-            width: 70%;
+            width: 100%;
             height: 50%;
         }
 
@@ -49,12 +49,7 @@ $primary-color: rgb(84, 84, 84);
             width: 100%;
 
             img {
-                position: absolute;
-                bottom: -180px;
-                height: 150%;
-                width: 100%;
-                left: auto;
-                right: auto;
+                height: auto;
             }
         }
     }
